# argo-trading

./: .gitignore  .golangci.yaml  CLAUDE.md  Makefile  Package.swift  README.md  codecov.yaml  go.mod  go.sum  hook_test.go  test2.go  test_hook.go  tools.go
.claude/: settings.json
.cursor/rules/: code-generation.mdc  database.mdc  structure.mdc  template.mdc  test.mdc  wasm.mdc
.github/: copilot-instructions.md
.github/hooks/: hooks.json
.github/workflows/: build-github-page.yaml  (+6 more)
ArgoTradingLocal/: Package.swift
config/: backtest_config.yaml  config.yaml
docs/: commission_formula.md  implementing-strategies.md  live-trading-engine.md  logging.md  market-data-provider-schema.md  optional-ending-time-design.md  polygon-websocket-implementation.md  realtime-market-data.md  release-process.md  trading-system.md  wallet-api-design.md
internal/indicator/test_data/: README.md  comparison_data.parquet  pyproject.toml  test_data.parquet
internal/indicator/test_data/results/: README.md  equity.csv  orders.csv  summary.json  trades.csv
internal/indicator/test_data/src/: main.py
internal/indicator/test_data/src/comparison/: __init__.py  generate_data.py  indicator.py  main.py  runner.py
internal/indicator/test_data/src/indicator_calculator/: __init__.py  duckdb.py  indicator.py
mocks/: data_generator.go  data_generator_test.go  generate.go
scripts/: binaries.sh  build.sh  check-nil.sh  generate_docs_index.py  install-hooks.sh  lint.sh  package-notarize.sh  setup.sh  sign-framework.sh  sign.sh  update-package-swift.sh  update-version.sh  upload_docs.py
(+380 files in other folders)
